# proiect-aai-purcelsescustanut

./: .gitignore  pyproject.toml
corpus/legi/: HOTĂRÂRE nr. 709 din 19 iulie 2001.txt  ORDONANȚĂ nr. 137 din 31 august 200.txt
scripts/: build_index.py  evaluate_rag.py
src/: dtos.py
src/tools/: pdf_tools.py  vector_tools.py
