[project]
name = "legal-contract-analyzer"
version = "0.1.0"
description = "Data Engineering and RAG evaluation layer for legal contract analysis"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.7",
  "python-dotenv>=1.0",
  "pdfplumber>=0.11",
  "pypdf>=4.2",
  "chromadb>=0.5",
  "langchain>=0.2",
  "langchain-openai>=0.1",
  "langchain-chroma>=0.1",
  "langchain-text-splitters>=0.2",
  "datasets>=2.19",
  "pandas>=2.2",
  "ragas==0.2.15",
  "langchain-community==0.3.31",
]
